--- a/index.html
+++ b/index.html
@@ -502,15 +502,15 @@
             }
 
             var properties;
-            var parseNumbers = true;
-            properties = Object.keys(counts).map(Number);
-            if (properties.includes(NaN)) {
-                properties = Object.keys(counts);
-                parseNumbers = false;
+            var parseNumbers = false;
+            properties = Object.keys(counts);
+            if (/^\d+$/g.test(properties[0])) {
+                properties = properties.map(Number);
+                parseNumbers = true;
             }
 
             if (parseNumbers && properties.length > 5) {
-                var step = properties[properties.length - 1] - properties[0] / 5;
+                var step = (properties[properties.length - 1] - properties[0]) / 5;
                 var propBounds = [[properties[0], properties[0] + Math.floor(step)]];
                 for (var i = 1; i < 4; i++) {
                     propBounds[i] = [propBounds[i - 1][1] + 1, properties[0] + Math.floor((i + 1) * step)];
